objects/Tranche_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Release_of_NTP__c</fullName>
        <description>Placeholder for the expected date of NTP to be filled out by Tranching team based on acceptable terms with Financiers</description>
        <label>Expected Release of NTP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financier__c</fullName>
        <label>Financier</label>
        <picklist>
            <picklistValues>
                <fullName>CITI1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CITI2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Suisse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIER 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rabobank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR - Non US Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR MS 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR USB 2013-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR SG 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR SR 2013-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR CS 2014-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infinite Sunshine 2015-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Capital LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SunPower Residential I LL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConEdison Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helios Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lux Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mosaic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrise 2 LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrise 3 LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunpower Resi II, LLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helios II Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Photon Resi Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lux II Resi Solar</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presentment_1_Payment_Date__c</fullName>
        <label>Presentment 1 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Presentment_2_Payment_Date__c</fullName>
        <label>Presentment 2 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Date__c</fullName>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Presentation (1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing (2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment (3)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tranche Batch</label>
    <listViews>
        <fullName>Closing</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Financier__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Presentment_2_Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Closing (2)</value>
        </filters>
        <label>Closing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Payment</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Financier__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <columns>Presentment_1_Payment_Date__c</columns>
        <columns>Presentment_2_Payment_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Presentation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Payment1</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Financier__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Helios Tranche A-33</value>
        </filters>
        <label>Payment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Presentation</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Financier__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Payment (3)</value>
        </filters>
        <label>Payment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sunrise_2</fullName>
        <columns>Financier__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Financier__c</field>
            <operation>equals</operation>
            <value>Sunrise 2 LLC</value>
        </filters>
        <label>Sunrise 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>USB_IV</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Financier__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Submitted__c</columns>
        <columns>Response_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Financier__c</field>
            <operation>equals</operation>
            <value>Helios II Resi Solar,Photon Resi Solar,Lux II Resi Solar</value>
        </filters>
        <label>USB-VI</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Tranche Batch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tranche Batches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>